--- a/config.org
+++ b/config.org
@@ -3642,12 +3642,11 @@ I have family all over the place, it's hard to keep up with the time difference.
 
 #+begin_src emacs-lisp :tangle yes
 (after! time
-  (setq world-clock-list '(("America/New_York"    "North Wales")
-                           ("America/Los_Angeles" "Napa")
+  (setq world-clock-list '(("America/Denver"      "Colorado")
+                           ("America/New_York"    "North Wales")
                            ("America/Sao_Paulo"   "Brasilia")
                            ("Europe/Madrid"       "Madrid")
-                           ("Asia/Kolkata"        "India")
-                           ("Asia/Singapore"      "Singapore")
+                           ("Europe/Kiev"         "Ukraine")
                            ("Asia/Tokyo"          "Tokyo"))))
 #+end_src
 
