--- a/config.org
+++ b/config.org
@@ -3022,11 +3022,11 @@ With the package installed, we are ready to define ~org-agenda-custom-commands~ 
                                  (tags priority-down category-keep)
                                  (search category-keep)))
   (org-super-agenda-groups      '((:name "Started"
-                                   :and (:todo "NEXT" :not (:tag ("consume"))))
+                                   :and (:todo "NEXT" :not (:tag ("consume") :scheduled future)))
                                   (:name "Today"
                                    :scheduled today :scheduled past :date today)
                                   (:name "Important"
-                                   :and (:priority "A" :not (:todo "WAIT")))
+                                   :and (:priority "A" :not (:todo "WAIT" :scheduled future)))
                                   (:name "Soon"
                                    :scheduled future)
                                   (:name "In Hold"
