--- a/config.org
+++ b/config.org
@@ -2458,25 +2458,12 @@ Activate only on ~flow-minor-mode~.
   (flycheck-add-mode 'javascript-flow 'flow-minor-mode))
 #+end_src
 
-Hack for making ~flycheck-flow~ work with the ~lsp~ checker, taken from [[https://github.com/flycheck/flycheck/issues/1762][this issue]].
+Make ~flycheck-flow~ work with the ~lsp~ checker.
 
 #+begin_src emacs-lisp :tangle yes
-;; Add buffer local Flycheck checkers after LSP for different major modes.
-(defvar-local dan/flycheck-local-cache nil)
-
-(after! flycheck
-  (defun dan/flycheck-local-checker-get (fn checker property)
-    ;; Only check the buffer local cache for the LSP checker, otherwise we get
-    ;; infinite loops.
-    (if (eq checker 'lsp)
-        (or (alist-get property dan/flycheck-local-cache)
-            (funcall fn checker property))
-      (funcall fn checker property)))
-  (advice-add 'flycheck-checker-get
-              :around 'dan/flycheck-local-checker-get)
-  (add-hook! 'lsp-managed-mode-hook
-    (when (bound-and-true-p flow-minor-mode)
-      (setq dan/flycheck-local-cache '((next-checkers . (javascript-flow)))))))
+(add-hook! 'lsp-managed-mode-hook
+  (when (bound-and-true-p flow-minor-mode)
+    (setq dan/flycheck-local-cache '((next-checkers . (javascript-flow))))))
 #+end_src
 
 ~flycheck~ has some trouble finding the ~flow~ binary, so I give it some help using =dir-local= variables on a per-project basis.
@@ -2485,6 +2472,30 @@ Hack for making ~flycheck-flow~ work with the ~lsp~ checker, taken from [[https:
 (after! flycheck-flow
   (put 'flycheck-javascript-eslint-executable 'safe-local-variable #'stringp)
   (put 'flycheck-javascript-flow-executable 'safe-local-variable #'stringp))
+#+end_src
+
+*** Flycheck
+
+Hack to add buffer local =flycheck= checkers after =lsp= for different major modes, taken from [[https://github.com/flycheck/flycheck/issues/1762][this issue]].
+
+#+begin_src emacs-lisp :tangle yes
+(defvar-local dan/flycheck-local-cache nil)
+
+(after! flycheck
+  (defadvice! dan/flycheck-local-checker-get (fn checker property)
+     "Check the buffer local cache for the LSP checker."
+    :around #'flycheck-checker-get
+    (if (eq checker 'lsp)
+        (or (alist-get property dan/flycheck-local-cache)
+            (funcall fn checker property))
+      (funcall fn checker property))))
+#+end_src
+
+Add the ability to use a checker in a per-directory basis, thanks to =.dir-locals.el=
+
+#+begin_src emacs-lisp :tangle yes
+(after! flycheck
+  (put 'flycheck-checker 'safe-local-variable #'symbolp))
 #+end_src
 
 *** Harpoon
@@ -2638,6 +2649,15 @@ numbers are disabled. For relative line numbers, set this to ~relative~.
 
 #+begin_src emacs-lisp :tangle yes
 (setq display-line-numbers-type 'relative)
+#+end_src
+
+*** Lsp
+
+Allow per-directory disabling of certain =lsp-clients=.
+
+#+begin_src emacs-lisp :tangle yes
+(after! lsp-mode
+  (put 'lsp-disabled-clients 'safe-local-variable #'sequencep))
 #+end_src
 
 *** Lua
@@ -3631,6 +3651,22 @@ To make the ~header-line~ a little more noticeable while consistent with the buf
   (custom-set-faces!
     '(header-line :family "Victor Mono"
                   :inherit default)))
+#+end_src
+
+*** Typescript
+
+For some reason, =eslint lsp= does not work for some of the sub-directories of a monorepo with =typescript=. This ugly hack let's me get diagnostics from =ts-ls= from =lsp= and =eslint= from =flycheck-eslint=.
+
+#+begin_src emacs-lisp :tangle yes
+(defvar-local dan/flycheck-javascript-eslint-use-after-lsp nil)
+
+(add-hook! 'lsp-managed-mode-hook
+  (when (and (eq major-mode 'typescript-mode)
+             (bound-and-true-p dan/flycheck-javascript-eslint-use-after-lsp))
+    (setq dan/flycheck-local-cache '((next-checkers . (javascript-eslint))))))
+
+(after! flycheck
+  (put 'dan/flycheck-javascript-eslint-use-after-lsp 'safe-local-variable #'identity))
 #+end_src
 
 *** uniquify
