--- a/config.org
+++ b/config.org
@@ -2216,13 +2216,17 @@ Do not use bash for auto-completion backend.
   (setq fish-completion-fallback-on-bash-p nil))
 #+end_src
 
-[[https://github.com/atomontage/xterm-color#eshell][Hack into eshell]] to get proper true color support. Make commands run through ~eshell~ show color codes that =emacs= can understand but only in ~eshell~ buffers, so other shell-facing commands have the default =TERM= value.
+[[https://github.com/atomontage/xterm-color#eshell][Hack into eshell]] to get proper 256 color support. Make commands run through ~eshell~ show color codes that =emacs= can understand but only in ~eshell~ buffers, so other shell-facing commands have the default =TERM= value.
 
 #+begin_src emacs-lisp :tangle yes
 (after! eshell
   (add-hook! 'eshell-banner-load-hook
-    (setq-local xterm-color-preserve-properties t)
-    (setq-local process-environment `(,@(seq-remove (lambda (e) (string-match-p "\\`TERM=" e)) process-environment) "TERM=eterm-color")))
+    (setq-local xterm-color-preserve-properties t))
+  (add-hook! 'eshell-before-prompt-hook
+    (setq-local process-environment `(,@(seq-remove (lambda (e)
+                                                      (string-match-p "\\`TERM=" e))
+                                                    process-environment)
+                                      "TERM=xterm-256color")))
   (add-to-list 'eshell-preoutput-filter-functions #'xterm-color-filter)
   (delq! #'eshell-handle-ansi-color eshell-output-filter-functions))
 #+end_src
