--- a/config.org
+++ b/config.org
@@ -2042,10 +2042,20 @@ Add keybindings overriding blocking operations.
 Dirvish is an improved version of the Emacs inbuilt package Dired. It not only gives Dired an appealing and highly customizable user interface, but also comes together with almost all possible parts required for full usability as a modern file manager.
 #+end_quote
 
+Override default layouts.
+
 #+begin_src emacs-lisp :tangle yes
-(setq dirvish-default-layout '(0 0 0.4)
-      dirvish-layout-recipes '((1 0.11 0.55)
-                               (0 0    0.40)))
+(after! dirvish
+  (setq dirvish-default-layout '(0 0 0.4)
+        dirvish-layout-recipes '((1 0.11 0.55)
+                                 (0 0    0.40))))
+#+end_src
+
+Add file size to display.
+
+#+begin_src emacs-lisp :tangle yes
+(after! dirvish
+  (pushnew! dirvish-attributes 'file-size))
 #+end_src
 
 Override ~dired-jump~ with ~dirvish~!
