--- a/config.org
+++ b/config.org
@@ -2178,7 +2178,7 @@ Various bits and pieces to enhance the Elfeed user experience.
 
 *** Elfeed Org
 
-And point =elfeed= to the org configuration file.
+Point =elfeed= to the org configuration file.
 
 #+begin_src emacs-lisp :tangle yes
 (after! elfeed
@@ -2190,15 +2190,6 @@ And point =elfeed= to the org configuration file.
 #+begin_src emacs-lisp :tangle yes
 (after! elfeed
   (load! "elfeed-settings" org-directory t))
-#+end_src
-
-Keybinding to easily find the feeds file.
-
-#+begin_src emacs-lisp :tangle yes
-(map! :leader
-      :desc "News feed config" :m "o N" (cmd! (unless (featurep 'elfeed-org)
-                                                (require 'elfeed-org))
-                                              (find-file (car rmh-elfeed-org-files))))
 #+end_src
 
 *** Elfeed Tube
