--- a/config.org
+++ b/config.org
@@ -3245,14 +3245,24 @@ The primary use of this package is for the daily/weekly agenda, made by the org-
   (org-super-agenda-mode)
 #+end_src
 
-For extra visibility, we tweak the agenda sorting strategy to make priority high tasks appear early.
+For extra visibility, we tweak the agenda sorting strategy to make =scheduled= tasks appear first, ordered by =priority=.
 
 #+begin_src emacs-lisp :tangle yes
   :custom
-  (org-agenda-sorting-strategy '((agenda priority-down habit-down time-up category-keep)
-                                 (todo priority-down category-keep)
-                                 (tags priority-down category-keep)
-                                 (search category-keep))))
+  (org-agenda-sorting-strategy '((agenda habit-down scheduled-up deadline-up ts-up time-up priority-down)
+                                 (todo habit-down scheduled-up priority-down)
+                                 (tags habit-down scheduled-up priority-down)
+                                 (search habit-down scheduled-up priority-down))))
+#+end_src
+
+Display any =scheduled= or =timestamp= info in agenda.
+
+#+begin_src emacs-lisp :tangle yes
+(after! org-agenda
+  (setq org-agenda-prefix-format    '((agenda . "  %?-12t%-12s")
+                                      (todo . "  %-12s")
+                                      (tags . "  %-12s")
+                                      (search . " %-12s"))))
 #+end_src
 
 The ~dan/org-super-agenda--date-today~ selector picks agenda items with timestamps in the past or today.
